Bug 223558 - Simlock function description doesn't appear
Summary: Simlock function description doesn't appear
Status: RESOLVED FIXED
Alias: None
Product: kstars
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Alexey Khudiakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-01-20 12:14 UTC by Efthymis
Modified: 2010-02-07 15:44 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
This patch resolved the bug in my system (1.48 KB, patch)
2010-02-07 10:08 UTC, devi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Efthymis 2010-01-20 12:14:57 UTC
Version:           1.5.3 (using KDE 4.3.2)
OS:                Linux

The operating system in which I found this bug is : Ubuntu 9.10, Karmic Koala, 64-bit version.
I downloaded "Kstars" using Ubuntu software center.

Go to :
(From main menu) --> Tools --> Script Builder --> Simlock.
Description of the functions doesn't appear in the box below, as expected.
Comment 1 Alexey Khudiakov 2010-02-01 21:35:39 UTC
Confirm this. Functions in SimClock lack description.
Comment 2 devi 2010-02-07 10:08:22 UTC
Created attachment 40575 [details]
This patch resolved the bug in my system
Comment 3 Alexey Khudiakov 2010-02-07 15:44:21 UTC
SVN commit 1086512 by khudyakov:

Fix bug in script builder. No description appeared for SimClock
family of functions

Applying patch from Sruthi Devi.

CCMAIL: kstars-devel@kde.org
BUG: 223558

 M  +34 -0     scriptbuilder.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1086512