Fix bug in script builder. No description appeared for SimClock family of functions

Applying patch from Sruthi Devi.

CCMAIL: kstars-devel@kde.org
BUG: 223558

svn path=/trunk/KDE/kdeedu/kstars/; revision=1086512